# ham-mixer

./: .gitignore  LICENSE  README.md
HamMixerCpp/: CMakeLists.txt  build.bat  setup_qt.bat
HamMixerCpp/include/HamMixer/: Version.h
HamMixerCpp/resources/: hammixer.rc  resources.qrc
HamMixerCpp/src/: main.cpp
HamMixerCpp/src/audio/: AudioManager.cpp  AudioManager.h  AudioSync.cpp  AudioSync.h  DelayBuffer.cpp  DelayBuffer.h  DeviceInfo.h  MixerCore.cpp  MixerCore.h  Recorder.cpp  Recorder.h  RingBuffer.cpp  RingBuffer.h  WasapiDevice.cpp  WasapiDevice.h
HamMixerCpp/src/config/: Settings.cpp  Settings.h
HamMixerCpp/src/serial/: CIVController.cpp  CIVController.h  CIVProtocol.cpp  CIVProtocol.h  KenwoodController.cpp  KenwoodController.h  RadioController.cpp  RadioController.h
HamMixerCpp/src/ui/: AudioDevicesDialog.cpp  AudioDevicesDialog.h  ChannelStrip.cpp  ChannelStrip.h  Crossfader.cpp  Crossfader.h  DevicePanel.cpp  DevicePanel.h  FrequencyLCD.cpp  FrequencyLCD.h  LevelMeter.cpp  LevelMeter.h  MainWindow.cpp  MainWindow.h  MasterStrip.cpp  MasterStrip.h  RadioControlPanel.cpp  RadioControlPanel.h  RadioControlWindow.cpp  RadioControlWindow.h  SMeter.cpp  SMeter.h  SMeterWindow.cpp  SMeterWindow.h  Styles.h  TransportControls.cpp  TransportControls.h  VBCableWizard.cpp  VBCableWizard.h  VoiceMemoryDialog.cpp  VoiceMemoryDialog.h  WebSdrManagerDialog.cpp  WebSdrManagerDialog.h
HamMixerCpp/src/websdr/: KiwiSdrController.cpp  KiwiSdrController.h  WebSdrController.cpp  WebSdrController.h  WebSdrManager.cpp  WebSdrManager.h  WebSdrSite.h
